--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-KE">
 <head>
 {% block head %}
 <!-------------------- Google tag (gtag.js) ---------------------->
@@ -95,7 +95,7 @@ function onStateChange(from) {
   <!-------------------------START------------------------------------------------> 
   
   <!-------------------------title----------------------------------------------------------------->
-  <title>Class Notes</title>
+  <title>BPAL class Notes</title>
 {% endblock %}
 </head>
 <body> <!-----onclick="resetProgress()"------>
