--- a/website/templates/om.html
+++ b/website/templates/om.html
@@ -241,8 +241,8 @@
         </div>
       </div>
     </div>
-    <li class="page-item"><a class="page-link" href="/procurement">
-        Procurement</a></li>
+    <li class="page-item"><a class="page-link" href="/TQM">
+        TQM</a></li>
     <li class="page-item">
       <a class="page-link" href="/economics">Public Economics</a>
     </li>
