--- a/website/templates/tqm.html
+++ b/website/templates/tqm.html
@@ -244,7 +244,7 @@
       </div>
     </div>
     <li class="page-item">
-      <a class="page-link" href="/procurement">Procurement</a>
+      <a class="page-link" href="/operations">Operations Mgmt.</a>
     </li>
   </ul>
 </nav>
