--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en-KE">
 <head>
 {% block head %}
+    <meta name="msvalidate.01" content="1C6400DEF4F6787B586DAC272059E0E4" />
 <!-------------------- Google tag (gtag.js) ---------------------->
     
     <script defer src="https://www.googletagmanager.com/gtag/js?id=G-SM05336KVZ"></script>
@@ -12,6 +13,7 @@
 
       gtag('config', 'G-SM05336KVZ');
     </script>
+
     <script type="module" ></script>
 <!------------Azure Monitoring -------------------->
     <script type="text/javascript">
