--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -23,7 +23,7 @@
 <!---------------------------------FAVICON---------------------------------------------------------------------->
 
     
-    <title>signup</title>
+    <title>Signup</title>
 </head>
 <body>
   <div id="layout-bars"></div>
