--- a/website/templates/egov.html
+++ b/website/templates/egov.html
@@ -42,8 +42,8 @@
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
           <div class="accordion-body">
             <strong>Main Notes</strong> 
-            <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" 
-            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/E-Gov/governance, public administration and information technology for post-2015 development ( PDFDrive ) (1)-min.pdf">Download</a>
+            <a id="dwn" class="btn btn-outline-danger" rel="noopener" download="" class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"  class="sr-only"
+            href="https://flasknotes.blob.core.windows.net/classnotes/BPAL 4.1 Notes/E-Gov/governance, public administration and information technology for post-2015 development ( PDFDrive ) (1)-min.pdf"  class="sr-only">Download</a>
           </div>
         </div>
       </div>
