--- a/website/static/base.css
+++ b/website/static/base.css
@@ -89,7 +89,7 @@
           right: 1%!important;
         }
         .background {
-          background: linear-gradient(45deg, #003366, #4CAF50);
+          background: linear-gradient(45deg, #185898, #702c9f)!important;
           height: 100vh;
           display: flex;
           flex-direction: row;
@@ -186,3 +186,33 @@
             align-items: center;
           }
         }
+        /*
+        #loader {
+          display: block;
+          position: fixed;
+          z-index: 999;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+           
+        }
+        
+        .loader {
+          display: inline-block;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          border: 8px solid #f3f3f3;
+          border-top: 8px solid #3498db;
+          border-radius: 50%;
+          width: 80px;
+          
+          height: 80px;
+          animation: spin 2s linear infinite;
+        }
+        
+        @keyframes spin {
+          0% { transform: translate(-50%, -50%) rotate(0deg); }
+          100% { transform: translate(-50%, -50%) rotate(360deg); }
+        } */
